tests/unit_tests/sema/reflect_unresolved_operand_01.cc
// RUN: %cxx -verify -fcheck %s

auto r = ^^missing_symbol; // expected-error {{use of undeclared identifier 'missing_symbol'}}
